--- a/1_instalacao_vue/index.html
+++ b/1_instalacao_vue/index.html
@@ -12,11 +12,13 @@
     <div id="app">
         <form id="app-form">
             <input type="text" name="nome" id="nome" v-model="input_name">
+            <input type="number" name="idade" id="idade" v-model="input_idade">
             <input type="submit" value="Enviar" v-on:click="submitForm">
         </form>
         <p>O meu nome é: {{ name }}</p> <!-- /*importar informações do app é feito com {{ }}*/ -->
         <p>O meu nome em tempo real é: {{ input_name }}</p>
         <p>Tenho a idade: {{ idade }}</p> <!-- /*importar informações do app é feito com {{ }}*/ -->
+        <p>Tenho a idade: {{ input_idade }}</p> <!-- /*importar informações do app é feito com {{ }}*/ -->
     </div>
 
     
